--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #380103, #a77b6f);
+    background: linear-gradient(135deg, #380103, #88321a);
     color: #333;
     display: flex;
     justify-content: center;
